refactor(#579): adopt the modern collection and switch idioms
Stream.toList() replaces collect(Collectors.toList()), List.of()
replaces the empty ArrayList returns of MdaPom and the Arrays.asList
and Collections.singletonList calls of the tests, and the failure
level is routed through an arrow-label switch instead of a chain of
equals calls.

Nothing which the change makes unmodifiable is ever mutated. The
lists which are - built(), the local one of plugins() and the
invalid entries of testInvalidIgnoreFailsRegardlessOfLevel, which
deliberately contains a null - stay as they were.

Closes #579